# Sqrt_of_two

./: .gitignore  CMakeLists.txt  README.md
Ausarbeitung/: .gitignore  Ausarbeitung.bib  Ausarbeitung.tex  aspdoc.cls
Implementierung/: Bignum.h  Expo.h  IntArr.h  LongKomma.h  Makefile  bignum.c  divisionTests.c  expo.c  intArr.c  longKomma.c  main.c
